[MSOSDU-1787]: unit tests added for code coverage